Fix wrong cropped calendar when downloading

--- a/src/components/App/stylesheet.scss
+++ b/src/components/App/stylesheet.scss
@@ -20,6 +20,7 @@
 
   .capture-container {
     position: absolute;
+    top: 0;
     left: 100vw;
     background-color: white;
 
